@@ -10,7 +10,6 @@ import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.collections4.CollectionUtils;
@@ -100,14 +99,14 @@ public class AdjournCasePreviewService extends IssueNoticeHandler {
 
         if (adjournment.getReasons() != null && !adjournment.getReasons().isEmpty()) {
             adjournCaseBuilder.reasonsForDecision(
-                adjournment.getReasons().stream().map(CollectionItem::getValue).collect(Collectors.toList()));
+                adjournment.getReasons().stream().map(CollectionItem::getValue).toList());
         } else {
             adjournCaseBuilder.reasonsForDecision(null);
         }
 
         if (adjournment.getAdditionalDirections() != null) {
             adjournCaseBuilder.additionalDirections(adjournment.getAdditionalDirections().stream()
-                .map(CollectionItem::getValue).collect(Collectors.toList()));
+                .map(CollectionItem::getValue).toList());
         }
 
         String hearingType = adjournment.getTypeOfHearing() != null
@@ -359,11 +358,11 @@ public class AdjournCasePreviewService extends IssueNoticeHandler {
                 .map(panelMember ->
                     judicialRefDataService.getJudicialUserFullName(panelMember.getPersonalCode()))
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList()));
+                .toList());
         } else {
             List<String> panelMembers = Stream.of(adjournment.getDisabilityQualifiedPanelMemberName(),
                 adjournment.getMedicallyQualifiedPanelMemberName(), adjournment.getOtherPanelMemberName())
-                .filter(org.apache.commons.lang3.StringUtils::isNotBlank).collect(Collectors.toList());
+                .filter(org.apache.commons.lang3.StringUtils::isNotBlank).toList();
 
             names.addAll(panelMembers);
         }
